[gd_scene load_steps=2 format=3 uid="uid://rvm761aip3nt"]

[ext_resource type="Script" path="res://scripts/SoundManager.gd" id="1_epc10"]

[node name="SoundManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epc10")

[node name="JumpPlayer" type="AudioStreamPlayer" parent="."]

[node name="StepPlayer" type="AudioStreamPlayer" parent="."]

[node name="MenuMusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="EndlessMusicPlayer" type="AudioStreamPlayer" parent="."]
